--- a/template/latex/default/template.latex
+++ b/template/latex/default/template.latex
@@ -7,6 +7,10 @@
       \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}
 }
 
+\providecommand{\tightlist}{%
+      \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}
+}
+
 $if(links-as-notes)$
     % Make links footnotes instead of hotlinks:
     \renewcommand{\href}[2]{#2\footnote{\url{#1}}}
