--- a/template/latex/hs-furtwangen/template.latex
+++ b/template/latex/hs-furtwangen/template.latex
@@ -1,5 +1,9 @@
 \documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$babel-lang$,$endif$$if(papersize)$$papersize$,$endif$$for(classoption)$$classoption$$sep$,$endfor$]{$documentclass$}
 
+\providecommand{\tightlist}{%
+      \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}
+}
+
 \input{settings/variables}
 \input{settings/commands}
 
