Add \providecommand, as pandoc wants it

--- a/template/latex/asme/one-column/template.latex
+++ b/template/latex/asme/one-column/template.latex
@@ -117,6 +117,10 @@ $endfor$
 
 \begin{document}
 
+\providecommand{\tightlist}{%
+      \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}
+}
+
 \maketitle
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
