--- a/template/latex/paper-simple/template.latex
+++ b/template/latex/paper-simple/template.latex
@@ -1,4 +1,5 @@
 \documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$lang$,$endif$$if(papersize)$$papersize$,$endif$$for(classoption)$$classoption$$sep$,$endfor$]{$documentclass$}
+\usepackage[toc]{glossaries}
 $if(fontfamily)$
 \usepackage{$fontfamily$}
 $else$
