Enable lmodern and put into deps

--- a/template/latex/hs-furtwangen/template.latex
+++ b/template/latex/hs-furtwangen/template.latex
@@ -65,7 +65,7 @@ $endif$
 $if(fontfamily)$
     \usepackage[$fontfamilyoptions$]{$fontfamily$}
 $else$
-    %\usepackage{lmodern}
+    \usepackage{lmodern}
 $endif$
 
 $if(linestretch)$
