--- a/template/latex/default/template.latex
+++ b/template/latex/default/template.latex
@@ -69,7 +69,7 @@ $endif$
 $if(fontfamily)$
     \usepackage[$fontfamilyoptions$]{$fontfamily$}
 $else$
-    %\usepackage{lmodern}
+    \usepackage{lmodern}
 $endif$
 
 $if(linestretch)$
