Add header-includes in asme/one-column

--- a/template/latex/asme/one-column/template.latex
+++ b/template/latex/asme/one-column/template.latex
@@ -115,6 +115,10 @@ $for(author)$
     }
 $endfor$
 
+$for(header-includes)$
+  $header-includes$
+$endfor$
+
 \begin{document}
 
 \providecommand{\tightlist}{%
