[PENDING] Rename example bibtex entry

--- a/bib/default.bib
+++ b/bib/default.bib
@@ -6,7 +6,7 @@ Outside of a bibtex entry is a comment...
 
 +------------------------------------------------------------------------------+
 
-@misc{example,
+@misc{examplebibentry,
     author = "example",
     title = "example",
     month = "01",
